# xc-sandbox

./: .gitignore  README.md  notes.md  wwnames-aab_events.txt  wwnames.txt
rb-sandbox/: Gemfile  aab_parse.rb  batch_gltf.rb  batch_wilay.rb  bf2.rb  bf3.rb  customth.rb  fnvhash32.rb  hash.rb  mapper.rb  mh.rb  portal.rb  theater.rb  wwise-search.rb
rs-sandbox2/: Cargo.toml
rs-sandbox2/src/: main.rs
xc3-rs-sandbox/: .gitignore  Cargo.toml
xc3-rs-sandbox/src/: main.rs
