[package]
name = "xc3-rs-sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
expanduser = "1.2.2"
serde = "1.0.192"
serde_json = "1.0.108"
xc3_lib = { git = "https://github.com/ScanMountGoat/xc3_lib", rev = "2f86b2f5a94dc1994bda5c243d0893f842b9e8d4" }
xc3_model = { git = "https://github.com/ScanMountGoat/xc3_lib", rev = "2f86b2f5a94dc1994bda5c243d0893f842b9e8d4" }
